--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4540,7 +4540,7 @@ hr {
 .login-form {
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 20%;
     width: 480px;
     padding: 90px 45px 60px 45px;
     transform: translate(-50%, -50%);
@@ -4580,13 +4580,17 @@ hr {
 
 .login-form .form-input {
     position: relative;
-    margin: 20px 0
+    margin: 20px 0 ;
+    text-align: start;
+
 }
 
 .login-form .form-input label {
     font-size: 18px;
     font-weight: 600;
-    color: #fff
+    color: #fff ;
+    text-align: end;
+
 }
 
 .login-form .form-input input {
