--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -21,7 +21,7 @@
 }
 
 .theme-bg {
-    background: #C86FFF
+    background: #5A100C
 }
 
 .brand-bg {
@@ -41,30 +41,30 @@
 }
 
 .theme-color {
-    color: #C86FFF
+    color: #5A100C
 }
 
 .boxed-btn {
     background: #fff;
-    color: #C86FFF !important;
+    color: #5A100C !important;
     display: inline-block;
     padding: 18px 44px;
     font-family: "Josefin Sans", sans-serif;
     font-size: 14px;
     font-weight: 400;
     border: 0;
-    border: 1px solid #C86FFF;
+    border: 1px solid #5A100C;
     letter-spacing: 3px;
     text-align: center;
-    color: #C86FFF;
+    color: #5A100C;
     text-transform: uppercase;
     cursor: pointer
 }
 
 .boxed-btn:hover {
-    background: #C86FFF;
+    background: #5A100C;
     color: #fff !important;
-    border: 1px solid #C86FFF
+    border: 1px solid #5A100C
 }
 
 .boxed-btn:focus {
@@ -362,11 +362,11 @@ hr {
 
 .owl-carousel:hover .owl-nav div:hover {
     color: #fff;
-    background: #ff3500
+    background: #5A100C
 }
 
 .btn {
-    background: #FF9F67;
+    background: #5A100C;
     font-family: "Josefin Sans", sans-serif;
     text-transform: capitalize;
     padding: 25px 38px !important;
@@ -438,7 +438,7 @@ hr {
 }
 
 .btn.btn3:hover::before {
-    background: #FF9F67;
+    background: #5A100C;
     border: 1px solid transparent
 }
 
@@ -485,7 +485,7 @@ hr {
 }
 
 .white-btn::before {
-    background: #C86FFF;
+    background: #5A100C;
     color: #fff !important
 }
 
@@ -516,7 +516,7 @@ hr {
 }
 
 .submit-btn2 {
-    background: #FF9F67;
+    background: #5A100C;
     width: 100%;
     height: 60px;
     padding: 10px 20px;
@@ -533,7 +533,7 @@ hr {
     text-transform: capitalize;
     border-radius: 0px;
     cursor: pointer;
-    color: #FF3514;
+    color: #5A100C;
     display: inline-block;
     font-size: 16px;
     box-shadow: 0px 7px 21px 0px rgba(0, 0, 0, 0.12);
@@ -542,8 +542,8 @@ hr {
 }
 
 .border-btn {
-    border: 1px solid #FF9F67;
-    color: #FF9F67;
+    border: 1px solid #5A100C;
+    color: #5A100C;
     font-family: "Josefin Sans", sans-serif;
     background: none;
     border-radius: 5px;
@@ -566,7 +566,7 @@ hr {
 .border-btn i {
     font-size: 16px;
     margin-right: 10px;
-    color: #C86FFF;
+    color: #5A100C;
     -webkit-transition: .3s;
     -moz-transition: .3s;
     -o-transition: .3s;
@@ -581,7 +581,7 @@ hr {
     top: 0;
     width: 101%;
     height: 101%;
-    background: #FF9F67;
+    background: #5A100C;
     z-index: -1;
     transition: transform 0.5s;
     transition-timing-function: ease;
@@ -637,7 +637,7 @@ hr {
 
 #scrollUp,
 #back-top {
-    background: #C86FFF;
+    background: #5A100C;
     height: 50px;
     width: 50px;
     right: 31px;
@@ -671,13 +671,13 @@ hr {
 }
 
 .all-btn {
-    color: #C86FFF;
+    color: #5A100C;
     text-decoration: underline;
     font-size: 16px
 }
 
 .all-btn:hover {
-    color: #C86FFF;
+    color: #5A100C;
     text-decoration: underline;
     letter-spacing: 1px
 }
@@ -2082,7 +2082,7 @@ hr {
     position: relative;
     border-style: solid;
     border-width: 1px;
-    border-top-color: #C86FFF;
+    border-top-color: #5A100C;
     border-bottom-color: transparent;
     border-left-color: transparent;
     border-right-color: transparent;
@@ -2593,7 +2593,7 @@ hr {
     font-size: 18px;
     font-weight: 700;
     margin-bottom: 22px;
-    color: #C86FFF;
+    color: #5A100C;
     text-transform: capitalize;
     display: inline-block;
     letter-spacing: 0.05em
@@ -2653,7 +2653,7 @@ hr {
 }
 
 .theme-bg {
-    background: #C86FFF
+    background: #5A100C
 }
 
 .brand-bg {
@@ -2673,7 +2673,7 @@ hr {
 }
 
 .theme-color {
-    color: #C86FFF
+    color: #5A100C
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -2856,7 +2856,7 @@ hr {
 }
 
 .main-header .main-menu ul ul.submenu>li>a:hover {
-    color: #C86FFF;
+    color: #5A100C;
     background: none;
     padding-left: 13px !important
 }
@@ -2973,12 +2973,12 @@ hr {
 
 .mobile_menu .slicknav_menu .slicknav_nav {
     margin-top: 9px !important;
-    background: #C86FFF
+    background: #5A100C
 }
 
 .mobile_menu .slicknav_menu .slicknav_nav a:hover {
     background: transparent;
-    color: #C86FFF
+    color: #5A100C
 }
 
 .mobile_menu .slicknav_menu .slicknav_nav a {
@@ -3852,7 +3852,7 @@ hr {
 }
 
 .video-icon a {
-    background: #FF9F67;
+    background: #5A100C;
     color: #ffff;
     width: 60px;
     height: 60px;
@@ -4049,7 +4049,7 @@ hr {
 
 .team-active button.slick-arrow i {
     font-size: 20px;
-    color: #C86FFF;
+    color: #5A100C;
     -webkit-transition: .2s;
     -moz-transition: .2s;
     -o-transition: .2s;
@@ -4133,7 +4133,7 @@ hr {
 }
 
 .courses-area .properties__caption P span {
-    color: #C86FFF;
+    color: #5A100C;
     font-size: 16px
 }
 
@@ -4176,7 +4176,7 @@ hr {
 
 .courses-area .properties:hover .border-btn2 {
     color: #fff;
-    background: #FF9F67;
+    background: #5A100C;
     -webkit-transition: .4s;
     -moz-transition: .4s;
     -o-transition: .4s;
@@ -4202,7 +4202,7 @@ hr {
 
 .courses-actives button.slick-arrow i {
     font-size: 20px;
-    color: #C86FFF;
+    color: #5A100C;
     -webkit-transition: .2s;
     -moz-transition: .2s;
     -o-transition: .2s;
@@ -4485,7 +4485,7 @@ hr {
 }
 
 .footer-area .info.error {
-    color: #C86FFF
+    color: #5A100C
 }
 
 .footer-bottom-area .footer-border {
@@ -4501,7 +4501,7 @@ hr {
 }
 
 .footer-bottom-area .footer-copy-right p i {
-    color: #C86FFF
+    color: #5A100C
 }
 
 .footer-social a {
@@ -4519,7 +4519,7 @@ hr {
 
 .footer-social a:hover {
     color: #fff;
-    background: #C86FFF
+    background: #5A100C
 }
 
 .footer-social a i {
@@ -4790,7 +4790,7 @@ hr {
 }
 
 .home-blog-area .home-blog-single .blog-img-cap .blog-cap h3 a:hover {
-    color: #C86FFF
+    color: #5A100C
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -4824,7 +4824,7 @@ hr {
 }
 
 .home-blog-single:hover .blog-img-cap .blog-img .blog-date {
-    background: #C86FFF
+    background: #5A100C
 }
 
 .home-blog-single:hover .blog-img-cap .blog-img img {
@@ -4849,7 +4849,7 @@ hr {
 
 .blog_area a:hover,
 .blog_area a :hover {
-    background: -webkit-linear-gradient(131deg, #C86FFF 0%, #C86FFF 99%);
+    background: -webkit-linear-gradient(131deg, #5A100C 0%, #5A100C 99%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-decoration: none;
@@ -5290,7 +5290,7 @@ hr {
 }
 
 .blog_details a:hover {
-    color: #FF9F67
+    color: #5A100C
 }
 
 .blog_details h2 {
@@ -5348,7 +5348,7 @@ hr {
     left: 10px;
     display: block;
     color: #fff;
-    background-color: #C86FFF;
+    background-color: #5A100C;
     padding: 8px 15px;
     border-radius: 5px
 }
@@ -5430,7 +5430,7 @@ hr {
 }
 
 .blog_right_sidebar .search_widget .input-group button {
-    background: #C86FFF;
+    background: #5A100C;
     border-left: 0;
     border: 1px solid #f0e9ff;
     padding: 4px 15px;
@@ -5548,7 +5548,7 @@ hr {
 }
 
 .blog_right_sidebar .tag_cloud_widget ul li a:hover {
-    background: #C86FFF;
+    background: #5A100C;
     color: #fff !important;
     -webkit-text-fill-color: #fff;
     text-decoration: none;
@@ -5759,7 +5759,7 @@ hr {
 }
 
 .single-post-area .blog-author a:hover {
-    color: #FF9F67
+    color: #5A100C
 }
 
 .single-post-area .blog-author p {
