--- a/src/app/Features/courses/components/courses-page.component.html
+++ b/src/app/Features/courses/components/courses-page.component.html
@@ -22,6 +22,7 @@
       <!-- Courses -->
     <app-custom-accordion title="courses">
       <app-generic-table
+       #teacherCourseTable
        [screenId]="'courses'" 
        [primaryKey]="'teacherCoursePk'"
        [columns]="teacherCourseColumns"
@@ -41,10 +42,10 @@
          [primaryKey]="'teacherCoursePk'"
          [dataFactory]="teacherCourseDataFactory"
          [apiPath]="'teacherCourses'"
-         (rowChanged)="onFormRowChanged($event)"
-         (newRowCreated)="onNewRow($event)"
-         (rowDeleted)="onFormRowDeleted($event)"   
-         (rowSaved)="onFormSaved($event)"
+         (rowChanged)="onTeacherCourseRowChanged($event)"
+         (newRowCreated)="onNewTeacherCourseRow($event)"
+         (rowDeleted)="onTeacherCourseRowDeleted($event)"   
+         (rowSaved)="onTeacherCourseSaved($event)"
 
          >
         </app-generic-form>
@@ -56,6 +57,7 @@
         <mat-tab-group mat-stretch-tabs="false">
           <mat-tab label='{{"Class.Classes" | translate}}' >
                <app-generic-table
+                #classesTableRef
                 [screenId]="'courses'" 
                 [primaryKey]="'classPk'"
                 [columns]="classColumns"
@@ -83,12 +85,6 @@
      
       <br>
      <app-custom-accordion title="Class.ClassDetails">
-<!-- <ng-container *ngIf="selectedClass as cls">
-  <app-date-time-picker 
-  [(ngModel)]="cls.expectedStartTime" 
-  [timeZone]="'Africa/Cairo'"></app-date-time-picker>
-</ng-container> -->
-
       <mat-tab-group mat-stretch-tabs="false">
           <mat-tab label='{{"Class.ClassDetails" | translate}}' >
                  <app-generic-form
@@ -97,7 +93,13 @@
                     [alwaysEditable]="true"
                     [primaryKey]="'classPk'"
                     [dataFactory]="classDataFactory"
-                    [apiPath]="'classes'">
+                    [apiPath]="'classes'"
+                    [selectedId]="selectedCourse?.teacherCoursePk"
+                    [searchParameterKey]="'teacherCourseFk'"
+                    (rowChanged)="onselectedClassRowChanged($event)"
+                    (newRowCreated)="onNewClassRow($event)"
+                    (rowSaved)="onClassSaved($event)"
+                    (rowDeleted)="onClassRowDeleted($event)">
                  </app-generic-form>
           </mat-tab>
           <mat-tab label='{{"StudentAttendance.Attendance" | translate}}' >
