--- a/src/app/shared/components/custom-accordion/custom-accordion.component.css
+++ b/src/app/shared/components/custom-accordion/custom-accordion.component.css
@@ -1,10 +1,10 @@
 .mat-expansion-header {
     font-family: 'Bukra';
     margin: 0px;
-    color: #265b3b;
+    color : hsl(var(--bg)) !important;
     height: 50px;
     font-weight: bolder;
-    font-size: 20px;
+    font-size: 22px;
     /* background: rgb(176, 29, 29); */
     line-height: 50px;
 }
