--- a/src/app/shared/components/table-components/generic-table/generic-table.component.css
+++ b/src/app/shared/components/table-components/generic-table/generic-table.component.css
@@ -13,7 +13,7 @@
   overflow-y: auto;       /* سكروول رأسي */
   overflow-x: auto;       /* لو الجدول أعرض من الكونتينر */
   display: block;
-  background: #fff;
+  background: #fff !important;
   padding-top: 5px;
 }
 
@@ -43,14 +43,14 @@
 
 .table-wrapper th {
   word-wrap: break-word;
-  border-bottom: 2px solid #265b3b;
+  border-bottom: 2px solid hsl(var(--bg)) !important;
   background-color: white !important;
   background: white !important;
   height: 30px;
   text-align: center;
   vertical-align: middle;
   font-weight: bold;
-  color: #265b3b;
+  color: hsl(var(--bg));
   padding: 0px;
 }
 
@@ -59,6 +59,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  /* background: white; */
 
 }
 
@@ -143,12 +144,12 @@ th:hover .sort-icons,
 }
 
 .sort-arrow.active {
-  color: #265b3b;
+  color:  hsl(var(--bg)) !important;
 }
 
 .column-label {
   font-weight: bold;
-  color: hsl(var(--bg));
+  color: hsl(var(--bg)) !important;
   font-size: 14px;
   line-height: 1.3;
   word-break: break-word;
