--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -33,7 +33,7 @@
                                             </li>
                                             
                                             <li routerLinkActive="active">
-                                                <a [routerLink]="['/payment']">{{ 'payment' | translate }}</a>
+                                                <a [routerLink]="['/financial-transactions']">{{ 'financial-transactions' | translate }}</a>
                                             </li>
 
                                             <li routerLinkActive="active">
