--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,7 +7,7 @@
                     <div class="row align-items-center">
                         <!-- Logo -->
                         <div class="col-xl-2 col-lg-2">
-                            <div class="logo">
+                            <div class="logo2">
                                 <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
                             </div>
                         </div>
@@ -18,26 +18,26 @@
                                     <nav>
                                         <ul id="navigation">
                                             <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-                                                <a [routerLink]="['/homePage']">{{ 'home' | translate }}</a>
+                                                <a class="hover-underline" [routerLink]="['/homePage']">{{ 'home' | translate }}</a>
                                             </li>
 
                                             <li routerLinkActive="active">
-                                                <a [routerLink]="['/courses']">{{ 'courses' | translate }}</a>
+                                                <a class="hover-underline" [routerLink]="['/courses']">{{ 'courses' | translate }}</a>
                                             </li>
 
                                             <li routerLinkActive="active">
-                                                <a [routerLink]="['/users']">{{ 'users' | translate }}</a>
+                                                <a class="hover-underline" [routerLink]="['/users']">{{ 'users' | translate }}</a>
                                             </li>
                                              <li routerLinkActive="active">
-                                                <a [routerLink]="['/system-lookups']">{{ 'systemLookups' | translate }}</a>
+                                                <a class="hover-underline" [routerLink]="['/system-lookups']">{{ 'systemLookups' | translate }}</a>
                                             </li>
                                             
                                             <li routerLinkActive="active">
-                                                <a [routerLink]="['/payment']">{{ 'payment' | translate }}</a>
+                                                <a class="hover-underline" [routerLink]="['/payment']">{{ 'payment' | translate }}</a>
                                             </li>
 
                                             <li routerLinkActive="active">
-                                                <a [routerLink]="['/reports']">{{ 'reports' | translate }}</a>
+                                                <a class="hover-underline" [routerLink]="['/reports']">{{ 'reports' | translate }}</a>
                                             </li>
 
                                             <!-- Button -->
